# data-engineer-finance-analytics

./: .env.example  .gitignore  README.md  generate_briefing.py  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-dashboard.yml  refresh-and-deploy.yml
dashboard/: evidence.config.yaml  package.json  playwright.config.js
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: briefing.md  index.md
dashboard/pages/macro/: index.md
dashboard/pages/stocks/: index.md
dashboard/sources/finance/: connection.bigquery.yaml  connection.yaml  latest_snapshot.sql  macro_indicators.sql  macro_vs_stocks.sql  monthly_returns.sql  performance_52w.sql  price_history.sql  sector_summary.sql
dashboard/tests/: dashboard.spec.js
extract/: economic_indicators.py  stock_prices.py
load/: bigquery_loader.py  loader.py
orchestrate/: __init__.py  assets.py  definitions.py  jobs.py  schedules.py
tests/: test_extraction.py  test_loading.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: financial_calcs.sql
transform/models/marts/: _marts.yml  dim_company.sql  dim_date.sql  fct_daily_trading.sql
transform/models/staging/: _staging.yml  stg_company_info.sql  stg_economic_indicators.sql  stg_stock_prices.sql
transform/seeds/: _seeds.yml  sp500_companies.csv
transform/tests/: assert_fct_dates_in_dim_date.sql  assert_fct_tickers_in_dim_company.sql  assert_no_large_date_gaps.sql  assert_positive_volume.sql  assert_reasonable_daily_return.sql  assert_reasonable_volatility.sql  assert_sufficient_history.sql  assert_valid_ohlc.sql
